k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: evite
  namespace: evite
spec:
  selector:
    app: evite
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
